--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,6 @@
   padding-left: 5px;
 }
 
-.mobile-container {
-  max-width: 100%;
-  margin: auto;
-  background-color: white;
-  height: 700px;
-  color: black;
-  border-radius: 10px;
-}
-
 .topnav {
   overflow: hidden;
   background-color: #4169b9;
@@ -53,4 +44,14 @@
 .active {
   background-color: #001E78;
   color: white;
+}
+
+.main {
+  background-color: #4169b9;
+  max-width: 90%;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 700px;
+  padding-top: 10px;
 }
