--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .logo {
-  height: 120px;
+  height: 110px;
   position: absolute;
   top: -10px;
   left: 10px;
@@ -12,7 +12,7 @@
   overflow: hidden;
   background-color: #4169b9;
   position: relative;
-  margin-top: 6.5rem;
+  margin-top: 6rem;
   text-align: center;
 }
 
@@ -24,8 +24,9 @@
   color: white;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 15px;
   display: block;
+  font-family: Arial;
 }
 
 .topnav a.icon {
@@ -47,11 +48,35 @@
 }
 
 .main {
-  background-color: #4169b9;
+  background-color: white;
   max-width: 90%;
   margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   height: 700px;
   padding-top: 10px;
+}
+
+.ad {
+  text-align: center;
+  max-width: 100%;
+  margin: auto;
+  border-radius: 2px;
+  padding-bottom: 5px;
+}
+
+.finds {
+  text-align: center;
+  max-width: 100%;
+  margin: auto;
+  border-radius: 2px;
+  padding-bottom: 5px;
+}
+
+.subscribe {
+  text-align: center;
+  max-width: 100%;
+  margin: auto;
+  border-radius: 2px;
+  padding-bottom: 5px;
 }
