--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,11 @@
 
 .topnav a {
   color: white;
-  padding: 14px 16px;
+  padding: 12px 14px;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 20px;
   display: block;
+  /*change font here*/
   font-family: Arial;
 }
 
@@ -54,7 +55,7 @@
   margin-left: auto;
   margin-right: auto;
   height: 700px;
-  padding-top: 10px;
+  padding-top: 5px;
 }
 
 .ad {
