--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,25 @@
   border-radius: 2px;
   padding-bottom: 5px;
 }
+
+.online {
+  text-align: center;
+  max-width: 100%;
+  margin: auto;
+  border-radius: 2px;
+  padding-bottom: 5px;
+}
+
+@media screen and (min-width: 768px) {  
+  .container {
+    display: flex;
+    gap: 14px;
+  }
+
+  .ad,
+  .subscribe {
+    width: 100%;
+    margin-bottom: 0;
+    border-radius: 0px;
+  }
+}
