--- a/css/style.css
+++ b/css/style.css
@@ -107,11 +107,15 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .main {
+    width: 70%;
+  }
+  
   .ad img,
   .subscribe img,
   .finds img,
   .online img  {
-    width: 100%;  /* Ensures the images scale to fill their container */
+    width: 100%;
   }
   
   .active {
