--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@
   padding-bottom: 5px;
 }
 
-.online {
+.recipe {
   text-align: center;
   max-width: 100%;
   margin: auto;
@@ -104,6 +104,9 @@
     margin-bottom: 0;
     border-radius: 0px;
   }
+  
+  .recipe img {
+    content: url("../media/recipes2.png");
 }
 
 @media screen and (min-width: 1024px) {
@@ -114,7 +117,7 @@
   .ad img,
   .subscribe img,
   .finds img,
-  .online img  {
+  .recipe img  {
     width: 100%;
   }
   
