--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,27 @@
   margin-bottom: 11px;
 }
 
+.signup-container p {
+  margin-bottom: 21px;
+  font-size: 14px;
+}
+
+form label {
+  display: block;
+  margin-bottom: 6px;
+  font-weight: bold;
+}
+
+font input {
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 7px;
+}
+
+
+
 @media screen and (min-width: 768px) {  
   .container {
     display: flex;
