--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,9 @@
   padding: 12px 14px;
   text-decoration: none;
   display: block;
-  /*change font here*/
-  font-family: Arial;
+  font-family: "Oswald", Arial, sans-serif;
+  font-weight: 600;
+  font-style: normal;
 }
 
 .topnav a.icon {
