--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@
   background-color: white;
   border-radius: 10px;
   padding: 30px;
-  max-width: 400px;
+  max-width: 100%;
   margin: 30px auto;
   box-shadow: 0 4px 10px 0px;
   
@@ -119,7 +119,7 @@ form label {
 }
 
 form input {
-  width: 90%;
+  width: 100%;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #ccc;
@@ -127,7 +127,7 @@ form input {
 }
 
 form button {
-  width: 90%;
+  width: 100%;
   padding: 12px;
   background-color: #002b7f;
   color: white;
@@ -135,6 +135,10 @@ form button {
   border-radius: 7px;
   font-size: 16px;
   cursor: pointer;
+}
+
+form button:hover {
+  background-color: #001c5b;
 }
 
 
