--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@
   padding-left: 5px;
 }
 
+a {
+  font-family: "Oswald", Arial, sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
 .topnav {
   overflow: hidden;
   background-color: #4169b9;
@@ -25,9 +31,6 @@
   padding: 12px 14px;
   text-decoration: none;
   display: block;
-  font-family: "Oswald", Arial, sans-serif;
-  font-weight: 600;
-  font-style: normal;
 }
 
 .topnav a.icon {
