--- a/css/style.css
+++ b/css/style.css
@@ -96,15 +96,20 @@
   background-color: white;
   border-radius: 10px;
   padding: 30px;
-  max-width: 100%;
+  max-width: 90%;
   margin: 30px auto;
   box-shadow: 0 4px 10px 0px;
   
 }
 
-.signup-container h2 {
+.signup-container h1 {
   color: #0b3278;
-  margin-bottom: 11px;
+  margin-bottom: 16px;
+  text-align: left;
+  font-size: 34px;
+  line-height: 44px;
+  font-weight: 700;
+  
 }
 
 .signup-container p {
@@ -114,14 +119,14 @@
 
 form label {
   display: block;
-  margin-bottom: 6px;
+  margin-bottom: 15px;
   font-weight: bold;
 }
 
 form input {
   width: 100%;
   padding: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 7px;
 }
