--- a/css/style.css
+++ b/css/style.css
@@ -102,10 +102,13 @@
   
 }
 
-.signup-container h1 {
-  color: #0b3278;
+.signup-container h2 {
+  color: #003087;
+  font-weight: 800; 
+  font-size: 32px;
+  line-height: 1.3;
   margin-bottom: 16px;
-  text-align: left;
+  font-family: Arial;
 }
 
 .signup-container p {
