--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,8 @@
 
 .signup-container p {
   margin-bottom: 21px;
-  font-size: 14px;
+  font-size: 16px;
+  font-family: Arial;
 }
 
 form label {
